2006-06-06  Tom Tromey  <tromey@redhat.com>

	* javax/swing/text/StyleContext.java (registerStaticAttributeKey):
	Javadoc fix.
	(writeAttributeSet): Implemented.

2006-06-06  Tom Tromey  <tromey@redhat.com>

	* javax/swing/text/html/HTMLDocument.java (SpecialAction.start):
	Implement.
	(SpecialAction.end): Removed.
	(IsindexAction.end): Likewise.

2006-06-06  Tom Tromey  <tromey@redhat.com>

	* include/jni.h (JDK1_1InitArgs): New struct.
	(JDK1_1AttachArgs): Likewise.

2006-06-06  Tom Tromey  <tromey@redhat.com>

	* java/security/UnresolvedPermission.java (getUnresolvedType): New
	method.
	(getUnresolvedName): New method.
	(getUnresolvedActions): New method.
	(getUnresolvedCerts): New method.

2006-06-06  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/javax/swing/text/html/CharacterAttributeTranslator.java
	(getColor): Removed debugging code.

2006-06-06  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/javax/swing/text/html/CharacterAttributeTranslator.java
	(getColor): Added support for "rgb(red, green, blue)" notation.
	(translateTag): Use Boolean.TRUE, not new Boolean().

2006-06-06  Roman Kennke  <kennke@aicas.com>

	PR 27651
	* javax/swing/JTree.java
	(JTree(TreeModel)): Call updateUI() before setModel().
	(setModel): Don't call updateUI here.

2006-06-06  Lillian Angel  <langel@redhat.com>
	
	* native/plugin/gcjwebplugin.cc:
	Fixed failure message and commenting.
	(NP_Initialize): Added more comments.

2006-06-06  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JSplitPane.java
	(AccessibleJSplitPane): API doc fixes,
	(setDividerLocation): Likewise,
	* javax/swing/plaf/basic/BasicLookAndFeel.java
	(initComponentDefaults): Additions to SplitPane.ancestorInputMap,
	* javax/swing/plaf/basic/BasicSplitPaneUI.java
	(getInputMap): New method,
	(getActionMap): New method,
	(createActionMap): New method,
	(installKeyboardActions): Implemented,
	(uninstallKeyboardActions): Implemented.
